data/derived/sp14/progs/unify/prog0680.ml.out
Characters 17-19:
  let _ = clone [] [];;
                   ^^
Error: This expression has type 'a list
       but an expression was expected of type int
